--- a/main.css
+++ b/main.css
@@ -219,3 +219,130 @@ ul li{
 	display: none;
 }
 
+
+.cssload-loader {
+	width: 156px;
+	height: 31px;
+	line-height: 31px;
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	top: 10%;
+	transform: translate(-50%, -50%);
+		-o-transform: translate(-50%, -50%);
+		-ms-transform: translate(-50%, -50%);
+		-webkit-transform: translate(-50%, -50%);
+		-moz-transform: translate(-50%, -50%);
+	font-family: helvetica, arial, sans-serif;
+	text-transform: uppercase;
+	font-weight: 900;
+	font-size:11px;
+	color: rgb(229,22,77);
+	letter-spacing: 0.2em;
+}
+.cssload-loader::before, .cssload-loader::after {
+	content: "";
+	display: block;
+	width: 9px;
+	height: 9px;
+	background: rgb(229,22,77);
+	position: absolute;
+	animation: cssload-load 0.81s infinite alternate ease-in-out;
+		-o-animation: cssload-load 0.81s infinite alternate ease-in-out;
+		-ms-animation: cssload-load 0.81s infinite alternate ease-in-out;
+		-webkit-animation: cssload-load 0.81s infinite alternate ease-in-out;
+		-moz-animation: cssload-load 0.81s infinite alternate ease-in-out;
+}
+.cssload-loader::before {
+	top: 0;
+}
+.cssload-loader::after {
+	bottom: 0;
+}
+
+
+
+@keyframes cssload-load {
+	0% {
+		left: 0;
+		height: 19px;
+		width: 9px;
+	}
+	50% {
+		height: 5px;
+		width: 25px;
+	}
+	100% {
+		left: 147px;
+		height: 19px;
+		width: 9px;
+	}
+}
+
+@-o-keyframes cssload-load {
+	0% {
+		left: 0;
+		height: 19px;
+		width: 9px;
+	}
+	50% {
+		height: 5px;
+		width: 25px;
+	}
+	100% {
+		left: 147px;
+		height: 19px;
+		width: 9px;
+	}
+}
+
+@-ms-keyframes cssload-load {
+	0% {
+		left: 0;
+		height: 19px;
+		width: 9px;
+	}
+	50% {
+		height: 5px;
+		width: 25px;
+	}
+	100% {
+		left: 147px;
+		height: 19px;
+		width: 9px;
+	}
+}
+
+@-webkit-keyframes cssload-load {
+	0% {
+		left: 0;
+		height: 19px;
+		width: 9px;
+	}
+	50% {
+		height: 5px;
+		width: 25px;
+	}
+	100% {
+		left: 147px;
+		height: 19px;
+		width: 9px;
+	}
+}
+
+@-moz-keyframes cssload-load {
+	0% {
+		left: 0;
+		height: 19px;
+		width: 9px;
+	}
+	50% {
+		height: 5px;
+		width: 25px;
+	}
+	100% {
+		left: 147px;
+		height: 19px;
+		width: 9px;
+	}
+}
