--- a/main.css
+++ b/main.css
@@ -1,61 +1,84 @@
 /*HomePage Styling*/
-body{
-	background-image: linear-gradient(rgba(26,26,26,0.7), rgba(26,26,26,0.7)), url('./france-paris-restaurant.jpg');
+html,
+body {
+	height: 100vh;
+}
+body {
+	background-image: linear-gradient(
+			rgba(26, 26, 26, 0.7),
+			rgba(26, 26, 26, 0.7)
+		),
+		url('https://res.cloudinary.com/ckarras/image/upload/v1529804356/datenight/france-paris-restaurant.jpg');
 	font-family: 'Alice', serif;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
-h1{
+h1 {
 	text-align: center;
-	margin-top: 15%;
 	font-size: 56px;
+	margin-top: 0;
 	font-family: 'Great Vibes', cursive;
-	color: #E5164E;
+	color: #e5164e;
 	letter-spacing: 4px;
-	margin-bottom: 15px
+	margin-bottom: 15px;
 }
 
-#search, #buttons{
+#search,
+#buttons {
 	text-align: center;
 }
 
-#food, #drinks, #entertainment{
+#food,
+#drinks,
+#entertainment {
 	background: lightskyblue;
-    border: lightblue;
-    border-radius: 6px;
-    margin: 10px;
-    margin-top: 0px;
-    cursor: pointer; 
+	border: lightblue;
+	border-radius: 6px;
+	margin: 10px;
+	margin-top: 0px;
+	cursor: pointer;
 }
 
-#food span, #drinks span, #entertainment span{
+#food span,
+#drinks span,
+#entertainment span {
 	font-weight: bold;
-	color: #474A49;
+	color: #474a49;
 }
 
-#food:hover, #drinks:hover, #entertainment:hover{
-	background-color: #1DC9C5;
+#food:hover,
+#drinks:hover,
+#entertainment:hover {
+	background-color: #1dc9c5;
 }
 
-#food img, #drinks img, #entertainment img{
+#food img,
+#drinks img,
+#entertainment img {
 	width: 40px;
 }
 
-.searchbar, .locationBar{
+.searchbar,
+.locationBar {
 	/*margin-top: 15px;*/
 	font-size: 18px;
-  	appearance: none;
-  	box-shadow: none;
-  	border: solid black 1px;
-  	border-radius: 4px;
-  	background-color: lightskyblue;
-  	padding: 3px; 	
+	appearance: none;
+	box-shadow: none;
+	border: solid black 1px;
+	border-radius: 4px;
+	background-color: lightskyblue;
+	padding: 3px;
 }
 
-.searchbar:focus{
-	outline:none;	
+.searchbar:focus {
+	outline: none;
 }
 
-.submit, .useLocation{
+.submit,
+.useLocation {
 	background-color: lightskyblue;
 	border: solid lightskyblue;
 	border-radius: 4px;
@@ -63,24 +86,28 @@ h1{
 	font-size: 18px;
 }
 
-.submit:hover{
-	background-color: #1DC9C5;
-	border-color: #1DC9C5
+.submit:hover {
+	background-color: #1dc9c5;
+	border-color: #1dc9c5;
 }
 
-.instructions{
+.instructions {
 	text-align: center;
 	color: lightskyblue;
 }
 
-#copyright{
+#copyright {
 	text-align: center;
 	color: white;
+	position: fixed;
+	width: 100%;
+	bottom: 0;
+	background-color: rgba(26, 26, 26, 0.7);
 }
 
 /*Responsive Layout for Results*/
 
-#container{
+#container {
 	display: flex;
 	flex-direction: column;
 	width: 80%;
@@ -88,34 +115,35 @@ h1{
 }
 
 @media (min-width: 1025px) {
-	.mainContent{
-	display: flex;
-	flex-direction: row;
+	.mainContent {
+		display: flex;
+		flex-direction: row;
 	}
 
-	#results{
-	width: 45%;
-	margin-left: auto;
+	#results {
+		width: 45%;
+		margin-left: auto;
 	}
 
-	#map{
-	height: 500px;
-	width: 45%;
+	#map {
+		height: 500px;
+		width: 45%;
 	}
 }
 
 @media (min-width: 375px) and (max-width: 667px) {
-	.mainContent{
+	.mainContent {
 		display: flex;
 		flex-direction: column;
 	}
-	#results, #map{
+	#results,
+	#map {
 		width: 100%;
 		margin: 0 auto;
 	}
 }
 
-#map{
+#map {
 	height: 300px;
 	margin-bottom: 15px;
 	border: solid black 1px;
@@ -124,7 +152,7 @@ h1{
 
 /*Search again Nav Bar*/
 
-#nav{
+#nav {
 	height: 50px;
 	margin-top: 10px;
 	width: 100%;
@@ -132,7 +160,7 @@ h1{
 	text-align: center;
 }
 
-.searchAgain{
+.searchAgain {
 	background-color: lightskyblue;
 	border: solid lightskyblue;
 	border-radius: 4px;
@@ -141,27 +169,27 @@ h1{
 	margin-top: 15px;
 }
 
-.searchAgain:hover{
-	background-color: #1DC9C5;
-	border-color: #1DC9C5
+.searchAgain:hover {
+	background-color: #1dc9c5;
+	border-color: #1dc9c5;
 }
 
 /*Results List styling*/
 
-ul{
+ul {
 	height: 500px;
 	overflow: auto;
 	padding-left: 0;
 	margin-top: 0;
 }
 
-ul li{
+ul li {
 	background-color: lightskyblue;
 	border: solid black 1px;
-    border-radius: 20px;
+	border-radius: 20px;
 }
 
-.noResults li{
+.noResults li {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -169,34 +197,35 @@ ul li{
 	font-size: 24px;
 }
 
-#results ul li:hover{
-	background-color: #1DC9C5;
+#results ul li:hover {
+	background-color: #1dc9c5;
 }
 
-.itemResult{
+.itemResult {
 	list-style: none;
 	border: solid 1px;
 	padding: 10px;
 }
 
-.info, .rating{
+.info,
+.rating {
 	display: inline-block;
 }
 
-.venueName{
+.venueName {
 	font-weight: bold;
 }
 
-.location{
+.location {
 	font-weight: 300;
 	font-size: 12px;
 }
 
-.rating{
+.rating {
 	float: right;
 }
 
-.score{
+.score {
 	border: solid black 1px;
 	border-radius: 50%;
 	text-align: center;
@@ -204,21 +233,20 @@ ul li{
 	width: 20px;
 }
 
-.moreInfo a{
+.moreInfo a {
 	text-decoration: none;
-	color: #E5164E;
+	color: #e5164e;
 }
 
-.moreInfo a:hover{
+.moreInfo a:hover {
 	font-size: 20px;
 }
 
 /*Toggle page views*/
 
-.js-hide-display{
+.js-hide-display {
 	display: none;
 }
-
 
 .cssload-loader {
 	width: 156px;
@@ -229,29 +257,30 @@ ul li{
 	left: 50%;
 	top: 10%;
 	transform: translate(-50%, -50%);
-		-o-transform: translate(-50%, -50%);
-		-ms-transform: translate(-50%, -50%);
-		-webkit-transform: translate(-50%, -50%);
-		-moz-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
 	font-family: helvetica, arial, sans-serif;
 	text-transform: uppercase;
 	font-weight: 900;
-	font-size:11px;
-	color: rgb(229,22,77);
+	font-size: 11px;
+	color: rgb(229, 22, 77);
 	letter-spacing: 0.2em;
 }
-.cssload-loader::before, .cssload-loader::after {
-	content: "";
+.cssload-loader::before,
+.cssload-loader::after {
+	content: '';
 	display: block;
 	width: 9px;
 	height: 9px;
-	background: rgb(229,22,77);
+	background: rgb(229, 22, 77);
 	position: absolute;
 	animation: cssload-load 0.81s infinite alternate ease-in-out;
-		-o-animation: cssload-load 0.81s infinite alternate ease-in-out;
-		-ms-animation: cssload-load 0.81s infinite alternate ease-in-out;
-		-webkit-animation: cssload-load 0.81s infinite alternate ease-in-out;
-		-moz-animation: cssload-load 0.81s infinite alternate ease-in-out;
+	-o-animation: cssload-load 0.81s infinite alternate ease-in-out;
+	-ms-animation: cssload-load 0.81s infinite alternate ease-in-out;
+	-webkit-animation: cssload-load 0.81s infinite alternate ease-in-out;
+	-moz-animation: cssload-load 0.81s infinite alternate ease-in-out;
 }
 .cssload-loader::before {
 	top: 0;
@@ -259,8 +288,6 @@ ul li{
 .cssload-loader::after {
 	bottom: 0;
 }
-
-
 
 @keyframes cssload-load {
 	0% {
